<resources>
    <string name="app_name">MyMovie</string>
    <string name="label_rating">8.0</string>
    <string name="label_image_poster">Image Poster</string>
    <string name="label_title">Title</string>
    <string name="label_description">Description</string>
    <string name="label_date">12 Juni 2021</string>
    <string name="title_movie">Movie</string>
    <string name="title_tv">TV</string>
    <string name="title_favorite">Favorite</string>
    <string name="label_back_image">Back Image</string>
    <string name="image_back">Image Back</string>
    <string name="label_overview">Overview</string>
    <string name="image_poster">Image Poster</string>
    <string name="image_rate">Image Rate</string>
    <string name="label_rate">Rating</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Movie Favorite</string>
    <string name="tab_text_2">Tv Favorite</string>
</resources>